python sdk update and cleanup
